[tool.poetry]
name = "etaknavigator"
version = "0.1.0"
description = "Non-GPS navigation"
authors = ["Andrew McDonald"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = "^3.9.1"
osmnx = "^1.9.4"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
